--- a/res/layout/messages_main.xml
+++ b/res/layout/messages_main.xml
@@ -6,17 +6,23 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:orientation="vertical">
-	     <com.vendsy.bartsy.ResponsiveScrollView 
-	          android:layout_width="match_parent"
-		      android:layout_height="match_parent"
-		      android:layout_weight="2">
-		      <LinearLayout
-				     android:id="@+id/messagesLayout"
-				     android:layout_width="match_parent"
-				     android:orientation="vertical"
-				     android:layout_height="wrap_content"/>
-	       </com.vendsy.bartsy.ResponsiveScrollView>
-		
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+		     <com.vendsy.bartsy.ResponsiveScrollView 
+		          android:layout_width="match_parent"
+			      android:layout_height="wrap_content"
+			      android:layout_gravity="bottom"
+			      android:stackFromBottom="true"
+                  android:transcriptMode="alwaysScroll"
+			      >
+			      <LinearLayout
+					     android:id="@+id/messagesLayout"
+					     android:layout_width="match_parent"
+					     android:orientation="vertical"
+					     android:layout_height="wrap_content"/>
+		       </com.vendsy.bartsy.ResponsiveScrollView>
+			</LinearLayout>
 		    <LinearLayout android:layout_width="match_parent" 
 		        android:layout_height="wrap_content">
 		        <EditText android:id="@+id/messageTextBox"
