--- a/res/layout/orders_past_row.xml
+++ b/res/layout/orders_past_row.xml
@@ -28,7 +28,7 @@
                 android:text="0 min ago" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/sender_recipient"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -57,6 +57,7 @@
                 android:id="@+id/TextView01"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:text="Status: " />
 
             <TextView
@@ -79,7 +80,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
-                android:text="Total" />
+                android:text="Total"
+                android:textColor="@android:color/holo_blue_dark" />
+
         </LinearLayout>
 
         <LinearLayout
