--- a/res/layout/dialog_user_profile.xml
+++ b/res/layout/dialog_user_profile.xml
@@ -2,185 +2,119 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#eeeeee"
+        android:divider="?android:dividerHorizontal"
         android:orientation="vertical"
-        android:padding="@dimen/activity_vertical_margin" >
+        android:showDividers="middle" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2" >
 
-            <Button
-                android:id="@+id/view_user_dialog_name"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:layout_weight="2"
-                android:background="@drawable/rounded_corner_dark"
-                android:text="Emily"
-                android:textColor="#ffffff"
-                android:textStyle="bold" />
-
-        </LinearLayout>
- 
-        <LinearLayout 
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_weight="2"
-            android:orientation="horizontal" >
+            <ImageView
+                android:id="@+id/view_user_dialog_image_resource"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@drawable/rounded_corner"
-                android:padding="@dimen/activity_vertical_margin" >
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/activity_horizontal_margin" >
 
-                <RelativeLayout
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" >
-
-                    <ImageView
-                        android:id="@+id/view_user_dialog_image_resource"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:scaleType="fitXY" />
-
-                    <ImageView
-                        android:id="@+id/ImageView03"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/frame" />
-                </RelativeLayout>
+                <TextView
+                    android:id="@+id/view_user_dialog_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="Name"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <ImageView
+                        android:id="@+id/ImageView05"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/exclamatory_icon_ping" />
+
+                    <TextView
+                        android:id="@+id/view_user_dialog_info"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:text="20&apos;s / F / Straight / Single"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <ImageView
+                        android:id="@+id/ImageView11"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/map_point_icon" />
+
+                    <TextView
+                        android:id="@+id/TextView09"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:text="Santa Monica, CA"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/view_user_profile_like"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingLeft="@dimen/activity_horizontal_margin" >
+                    android:visibility="gone" >
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" >
+                    <ImageView
+                        android:id="@+id/ImageView07"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/heart" />
 
-                        <FrameLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="1dp" >
+                    <TextView
+                        android:id="@+id/TextView13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:text="You like each other"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                </LinearLayout>
 
-                            <ImageView
-                                android:id="@+id/ImageView05"
-                                android:layout_width="17dp"
-                                android:layout_height="17dp"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/vitals" />
-                        </FrameLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
 
-                        <TextView
-                            android:id="@+id/view_user_dialog_info"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                            android:text="20&apos;s / F / Straight / Single"
-                            android:textAppearance="?android:attr/textAppearanceSmall" />
-                    </LinearLayout>
+                    <ImageView
+                        android:id="@+id/ImageView01"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/mail" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" >
-
-                        <FrameLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="1dp" >
-
-                            <ImageView
-                                android:id="@+id/ImageView11"
-                                android:layout_width="17dp"
-                                android:layout_height="17dp"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/location" />
-                        </FrameLayout>
-
-                        <TextView
-                            android:id="@+id/TextView09"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                            android:text="Santa Monica, CA"
-                            android:textAppearance="?android:attr/textAppearanceSmall" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" >
-
-                        <FrameLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="1dp" >
-                        </FrameLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" >
-
-                        <FrameLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="1dp" >
-
-                            <ImageView
-                                android:id="@+id/ImageView07"
-                                android:layout_width="17dp"
-                                android:layout_height="17dp"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/heart" />
-                        </FrameLayout>
-
-                        <TextView
-                            android:id="@+id/TextView13"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                            android:text="You like each other"
-                            android:textAppearance="?android:attr/textAppearanceSmall" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" >
-
-                        <FrameLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="1dp" >
-
-                            <ImageView
-                                android:id="@+id/ImageView01"
-                                android:layout_width="17dp"
-                                android:layout_height="17dp"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/message" />
-                        </FrameLayout>
-
-                        <TextView
-                            android:id="@+id/TextView06"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                            android:text="Messages"
-                            android:textAppearance="?android:attr/textAppearanceSmall" />
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/TextView06"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:text="You chatted"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -249,8 +183,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="@drawable/rounded_corner"
-            android:padding="@dimen/activity_vertical_margin"
             android:text="I like long walks on the beach and dirty martinis, but you can start by buying me a drink. "
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
