Added venue image in the venue list.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@367 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/notifications_item.xml
+++ b/res/layout/notifications_item.xml
@@ -7,13 +7,13 @@
            android1:id="@+id/profileImage"
            android1:layout_width="70dp"
            android1:layout_height="70dp"
-           android1:padding="3dp"
-           android1:scaleType="centerCrop"
-           android1:src="@drawable/profile" />
+           android1:background="@android:color/background_dark"
+           android1:scaleType="centerInside" />
 
 				<LinearLayout
 				    android1:layout_width="fill_parent"
 				    android1:layout_height="wrap_content"
+				    android1:layout_marginLeft="@dimen/activity_horizontal_margin"
 				    android1:orientation="vertical" >
 
 					<LinearLayout
