--- a/res/layout/map_list_item.xml
+++ b/res/layout/map_list_item.xml
@@ -7,12 +7,20 @@
     android:dividerPadding="@dimen/activity_vertical_margin"
     android:showDividers="middle" >
 
+    <ImageView
+        android:id="@+id/view_map_venue_image"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@android:color/background_dark"
+        android:padding="2dp"
+        android:scaleType="centerInside" />
+
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_weight="2"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingBottom="4dp"
         android:paddingLeft="@dimen/activity_horizontal_margin" >
 
         <LinearLayout
@@ -49,7 +57,15 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="vertical" >
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical" >
 
@@ -78,7 +94,7 @@
 
             <LinearLayout
                 android:id="@+id/view_map_checkins"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical" >
 
@@ -97,7 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text=" people checked in"
+                    android:text=" checkins"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
 
