--- a/res/layout/messages_main.xml
+++ b/res/layout/messages_main.xml
@@ -15,7 +15,7 @@
 			      android:layout_gravity="bottom"
 			      android:stackFromBottom="true"
                   android:transcriptMode="alwaysScroll"
-			      >
+                  android:id="@+id/scrollView">
 			      <LinearLayout
 					     android:id="@+id/messagesLayout"
 					     android:layout_width="match_parent"
