--- a/res/layout/menu_collapsed.xml
+++ b/res/layout/menu_collapsed.xml
@@ -340,7 +340,6 @@
                             android:layout_marginTop="2dp"
                             android:gravity="right|center_vertical"
                             android:padding="0dp"
-                            android:text="All favorites..."
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="#f83ab3" />
                     </LinearLayout>
@@ -390,7 +389,6 @@
                             android:layout_marginTop="2dp"
                             android:gravity="right|center_vertical"
                             android:padding="0dp"
-                            android:text="Bartsy Cocktails..."
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="#f83ab3" />
                     </LinearLayout>
@@ -428,7 +426,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="2"
-                            android:text="Mixed drinks"
+                            android:text="Food menu"
                             android:textAppearance="?android:attr/textAppearanceMedium" />
 
                         <Button
@@ -440,7 +438,6 @@
                             android:layout_marginTop="2dp"
                             android:gravity="right|center_vertical"
                             android:padding="0dp"
-                            android:text="Bartsy Cocktails..."
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="#f83ab3" />
                     </LinearLayout>
