--- a/res/layout/menu_collapsed.xml
+++ b/res/layout/menu_collapsed.xml
@@ -185,8 +185,10 @@
                             android:layout_marginTop="2dp"
                             android:gravity="right|center_vertical"
                             android:padding="0dp"
+                            android:text="Bartsy Cocktails..."
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="#f83ab3" />
+
                     </LinearLayout>
 
                     <FrameLayout
@@ -222,7 +224,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="2"
-                            android:text="Venue Cocktails"
+                            android:text="Cocktails"
                             android:textAppearance="?android:attr/textAppearanceMedium" />
 
                         <Button
@@ -234,7 +236,6 @@
                             android:layout_marginTop="2dp"
                             android:gravity="right|center_vertical"
                             android:padding="0dp"
-                            android:text="Bartsy Cocktails..."
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="#f83ab3" />
                     </LinearLayout>
