--- a/res/layout/spirits_order.xml
+++ b/res/layout/spirits_order.xml
@@ -60,7 +60,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/holo_red_dark" >
+                        android:background="#f83ab3" >
 
                         <CheckBox
                             android:id="@+id/CheckBox02"
