--- a/res/layout/message_self_view.xml
+++ b/res/layout/message_self_view.xml
@@ -3,18 +3,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="right">
-	 
-     <LinearLayout android:id="@+id/messages_list"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginBottom="1dp" 
         android:gravity="right">
+	     <LinearLayout android:id="@+id/messages_list"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="vertical"
+	        android:gravity="right">
+	     </LinearLayout>
+	     <TextView android:id="@+id/messages_list_date"
+	         android:layout_width="wrap_content"
+	         android:layout_height="wrap_content"
+	         android:textColor="#A9E2F3"
+	         android:gravity="right"/>
      </LinearLayout>
+
 	 <ImageView
             android:id="@+id/view_user_list_image_resource"
             android:src="@drawable/profile"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:scaleType="fitCenter" />
+	 
 </LinearLayout>
