--- a/res/layout/message_view.xml
+++ b/res/layout/message_view.xml
@@ -8,11 +8,19 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:scaleType="fitCenter" />
-     <LinearLayout android:id="@+id/messages_list"
+	 <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="1dp" >
+        android:orientation="vertical">
+	     <LinearLayout android:id="@+id/messages_list"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="vertical">
+	     </LinearLayout>
+	     <TextView android:id="@+id/messages_list_date"
+	         android:layout_width="wrap_content"
+	         android:layout_height="wrap_content"
+	         android:textColor="#A9E2F3"/>
      </LinearLayout>
 
 </LinearLayout>
