--- a/res/layout/menu_tab.xml
+++ b/res/layout/menu_tab.xml
@@ -13,27 +13,25 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
-        
-		<LinearLayout android:id="@+id/view_custom_drinks"
-		    android:layout_width="match_parent"
-        	android:layout_height="wrap_content">
-        	
-			<TextView
-			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content"
-			    android:layout_marginLeft="20dp"
-			    android:padding="10dp"
-			    android:text="@string/customDrinkLabel"
-			    android:textColor="#bbbbbb"
-			    android:textSize="20sp" />
+        <SearchView
+                android:id="@+id/SearchView01"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:gravity="right"
+                android:iconifiedByDefault="true"
+                android:queryHint="Bartsy Menu Search" >
 
-		</LinearLayout>
+            </SearchView>
+
         <ExpandableListView
             android:id="@+id/view_drinks_for_me_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="vertical" >
+            android:divider="@android:color/holo_blue_light"
+            android:dividerHeight="1dp"
+            >
         </ExpandableListView>
     </LinearLayout>
 
