New menu changes and rewards
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@391 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -169,7 +169,7 @@
                 android:orientation="vertical" >
 
                 <Button
-                    android:id="@+id/Button01"
+                    android:id="@+id/rewardsButton"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
