--- a/res/layout/menu_loading.xml
+++ b/res/layout/menu_loading.xml
@@ -3,16 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" android:gravity="center">
+    android:orientation="vertical" >
 
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
         <ProgressBar
-            android:id="@+id/progressBar1"
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyleSmall"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="@dimen/activity_vertical_margin" />
 
         <TextView
             android:id="@+id/textView1"
