--- a/res/layout/order_item.xml
+++ b/res/layout/order_item.xml
@@ -24,14 +24,27 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
 
-                <TextView
-                    android:id="@+id/view_order_item_name"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:layout_weight="2"
-                    android:text="Vodka Martini"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:layout_weight="2" >
+
+                    <TextView
+                        android:id="@+id/view_order_item_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_weight="2"
+                        android:text="Title"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                    <CheckBox
+                        android:id="@+id/view_favorite_button"
+                        style="?android:attr/starStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
 
                 <FrameLayout
                     android:layout_width="match_parent"
@@ -109,27 +122,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginTop="4dp"
             android:layout_weight="2"
-            android:text="Add to order - $12" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:gravity="center_vertical"
-            android:orientation="vertical" >
-
-            <CheckBox
-                android:id="@+id/checkBox2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Favorite" />
-
-            <CheckBox
-                android:id="@+id/CheckBox08"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Like" />
-        </LinearLayout>
+            android:text="Add to order" />
     </LinearLayout>
 
 </LinearLayout>
