--- a/res/layout/order_item.xml
+++ b/res/layout/order_item.xml
@@ -38,12 +38,6 @@
                         android:text="Title"
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                    <CheckBox
-                        android:id="@+id/view_favorite_button"
-                        style="?android:attr/starStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
                 </LinearLayout>
 
                 <FrameLayout
@@ -115,13 +109,20 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical" >
 
+        <CheckBox
+            android:id="@+id/view_order_item_favorite"
+            style="?android:attr/starStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="Save to favorites    " />
+
         <Button
-            android:id="@+id/view_order_item_submit"
+            android:id="@+id/view_order_item_add"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="4dp"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:text="Add to order" />
     </LinearLayout>
 
