Additional fields in orders, various UI changes and bug fixes.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@415 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/map_list_item.xml
+++ b/res/layout/map_list_item.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/view_map_venue_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2435 Main St, Santa Monica, CA 90405"
+                    android:text="2435 Main St"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textSize="11sp" />
             </LinearLayout>
