--- a/res/layout/item_customize.xml
+++ b/res/layout/item_customize.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/view_order_item_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:orientation="vertical" >
 
                 <LinearLayout
@@ -70,8 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:orientation="vertical"
-                android:paddingTop="@dimen/actionbar_compat_button_home_width" >
+                android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/TextView15"
@@ -87,12 +87,12 @@
                 </FrameLayout>
 
                 <EditText
-                    android:id="@+id/view_order_item_instructions"
+                    android:id="@+id/view_order_item_special_instructions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Optional"
-                    android:inputType="textMultiLine" />
+                    android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine" />
             </LinearLayout>
         </LinearLayout>
 
@@ -112,9 +112,10 @@
         <CheckBox
             android:id="@+id/view_order_item_favorite"
             style="?android:attr/starStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_weight="2"
             android:text="Save to favorites    " />
 
         <Button
@@ -122,8 +123,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:text="Add to order" />
+
     </LinearLayout>
 
 </LinearLayout>
