--- a/res/layout/open_orders.xml
+++ b/res/layout/open_orders.xml
@@ -10,16 +10,75 @@
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2" >
+        android:layout_height="wrap_content" >
 
         <LinearLayout
-            android:id="@+id/order_list"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:paddingTop="@dimen/activity_vertical_margin" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:id="@+id/open_orders_pickup_field"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top" >
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="4"
+                    android:orientation="vertical" >
+
+                    <ImageView
+                        android:id="@+id/open_orders_qr_code"
+                        android:layout_width="125dp"
+                        android:layout_height="125dp"
+                        android:scaleType="centerInside"
+                        android:src="#dddddd" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/open_orders_pickup_code"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="-15sp"
+                        android:layout_marginTop="-15sp"
+                        android:text="856"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="#f83ab3"
+                        android:textSize="100sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:gravity="center_horizontal"
+                        android:text="To pick up your order, look for the Bartsy sign and present this number."
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textSize="10sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/order_list"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/activity_vertical_margin" >
+            </LinearLayout>
+
         </LinearLayout>
+
     </ScrollView>
 </LinearLayout>
