Fixed the issues:
*When sending a chat and hte message is longer than 10 characters or so, onlyu the first 10 or so characters appers on the sender's screen

*The app title should not disappear when clicking to send a chat and the home back button should be enabled.

git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@418 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/messages_main.xml
+++ b/res/layout/messages_main.xml
@@ -11,8 +11,8 @@
             android:layout_weight="2">
 		     <com.vendsy.bartsy.ResponsiveScrollView 
 		          android:layout_width="match_parent"
-			      android:layout_height="wrap_content"
-			      android:layout_gravity="bottom"
+			      android:layout_height="match_parent"
+			      android:gravity="bottom"
 			      android:stackFromBottom="true"
                   android:transcriptMode="alwaysScroll"
                   android:id="@+id/scrollView">
@@ -20,6 +20,7 @@
 					     android:id="@+id/messagesLayout"
 					     android:layout_width="match_parent"
 					     android:orientation="vertical"
+					     android:layout_gravity="bottom"
 					     android:layout_height="wrap_content"/>
 		       </com.vendsy.bartsy.ResponsiveScrollView>
 			</LinearLayout>
