--- a/res/layout/message_self_view.xml
+++ b/res/layout/message_self_view.xml
@@ -6,6 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="2"
         android:orientation="vertical"
         android:gravity="right">
 	     <LinearLayout android:id="@+id/messages_list"
