--- a/res/layout/orders_tab.xml
+++ b/res/layout/orders_tab.xml
@@ -25,8 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:textOff="All orders"
-            android:textOn="All orders" />
+            android:textOff="Past orders"
+            android:textOn="Past orders" />
     </LinearLayout>
         
         <LinearLayout
