--- a/res/layout/user_profile.xml
+++ b/res/layout/user_profile.xml
@@ -223,7 +223,7 @@
                         android:layout_width="90dp"
                         android:layout_height="fill_parent"
                         android:gravity="center_vertical"
-                        android:text="First Name:" />
+                        android:text="First Name*" />
 
                     <EditText
                         android:id="@+id/view_profile_first_name"
@@ -246,7 +246,7 @@
                         android:layout_width="90dp"
                         android:layout_height="fill_parent"
                         android:gravity="center_vertical"
-                        android:text="Last Name:" />
+                        android:text="Last Name*" />
 
                     <EditText
                         android:id="@+id/view_profile_last_name"
