--- a/res/layout/order_dialog.xml
+++ b/res/layout/order_dialog.xml
@@ -64,16 +64,12 @@
 
             </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/view_dialog_drink_items"
+    <ListView
+        android:id="@+id/item_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:divider="?android:dividerHorizontal"
-        android:orientation="vertical"
-        android:showDividers="beginning|middle|end" >
+        android:layout_height="wrap_content" >
 
-    </LinearLayout>
+    </ListView>
 
     <LinearLayout
         android:layout_width="fill_parent"
