Fixed the scroll issue in Chat messages Activity
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@444 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/messages_main.xml
+++ b/res/layout/messages_main.xml
@@ -8,19 +8,16 @@
         android:orientation="vertical">
         <LinearLayout android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="bottom"
             android:layout_weight="2">
 		     <com.vendsy.bartsy.ResponsiveScrollView 
 		          android:layout_width="match_parent"
-			      android:layout_height="match_parent"
-			      android:gravity="bottom"
-			      android:stackFromBottom="true"
-                  android:transcriptMode="alwaysScroll"
+			      android:layout_height="wrap_content"
                   android:id="@+id/scrollView">
 			      <LinearLayout
 					     android:id="@+id/messagesLayout"
 					     android:layout_width="match_parent"
 					     android:orientation="vertical"
-					     android:layout_gravity="bottom"
 					     android:layout_height="wrap_content"/>
 		       </com.vendsy.bartsy.ResponsiveScrollView>
 			</LinearLayout>
