--- a/res/layout/map_list_item.xml
+++ b/res/layout/map_list_item.xml
@@ -11,9 +11,7 @@
         android:id="@+id/view_map_venue_image"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background="@android:color/background_dark"
-        android:padding="2dp"
-        android:scaleType="centerInside" />
+        android:scaleType="fitXY" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -71,8 +69,10 @@
 
             <LinearLayout
                 android:id="@+id/view_map_closed"
-                android:layout_width="150dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="2"
                 android:visibility="gone" >
 
                 <ImageView
@@ -94,9 +94,10 @@
 
             <LinearLayout
                 android:id="@+id/view_map_checkins"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical" >
+                android:layout_gravity="center_vertical"
+                android:layout_weight="2" >
 
                 <TextView
                     android:id="@+id/view_map_venue_people_count"
@@ -119,8 +120,10 @@
 
             <LinearLayout
                 android:id="@+id/view_map_wifi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="2" >
 
                 <ImageView
                     android:id="@+id/imageView1"
@@ -152,9 +155,10 @@
         <ImageView
             android:id="@+id/view_map_venue_checked_in"
             android:layout_width="25dp"
-            android:layout_height="fill_parent"
+            android:layout_height="25dp"
             android:layout_gravity="center"
             android:layout_marginRight="2dp"
+            android:scaleType="fitXY"
             android:src="@drawable/tickmark"
             android:visibility="gone" />
 
